<resources>
    <string name="app_name">En Forma</string>
    <string name="exercise">Ejercicios</string>
    <string name="resume">Resumen</string>
    <string name="settings">Opciones</string>
    <string name="touch_the_screen">Touch the screen</string>
    <!-- EXERCISE FRAGMENT -->
    <string name="ex_footing">Footing</string>
    <string name="ex_gym">Gimnasia</string>
    <string name="ex_weight">Pesas</string>
    <string name="ex_bicycle">Bicicleta</string>
    <string name="back">Back</string>
    <string name="start">Inicio</string>
    <string name="end">Final</string>
    <string name="message_duration">Has practicado durante %1$d minutos</string>
    <string name="init_exercise">Inicio</string>
    <string name="end_exercise">Final</string>
    <string name="total">%1$d minutes</string>


</resources>