<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="20dp"
    tools:context=".ui.exercise.ExerciseFragment">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_title"
    style="@style/title"
    android:text="@string/app_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/ib_footing"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/icon_footing"
    android:contentDescription="@string/ex_footing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_title" />

<androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/ib_gym"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/icon_gym"
    android:contentDescription="@string/ex_gym"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ib_footing" />

<androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/ib_weight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/icon_weights"
    android:contentDescription="@string/ex_weight"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ib_footing" />

<androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/ib_bicycle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/icon_bicycle"
    android:contentDescription="@string/ex_bicycle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ib_gym" />

</androidx.constraintlayout.widget.ConstraintLayout>